More corrections to html look (also on mobiles)

--- a/soundgames.css
+++ b/soundgames.css
@@ -9,7 +9,7 @@ body
         font-size:18px;
         background-color: black; 
         color: white; 
-        max-width: 540px;
+        max-width: 600px;
         width:100%;
         overflow-x:hidden;
     } 
